Fix navbar overlap

--- a/main/src/style.css
+++ b/main/src/style.css
@@ -899,13 +899,6 @@ li:before {
     }
   }
   
-  .container {
-    margin: 0 auto;
-    padding: 50px 0 0;
-    max-width: 960px;
-    width: 100%;
-  }
-  
   .panel {
     background-color: #fff;
     border-radius: 10px;
